# mikes-game

./: PLAN.md  README.md  config.toml  pyproject.toml
.vibe/skills/pixel-art-creator/: SKILL.md
.vibe/skills/procedural-generator/: SKILL.md
.vibe/skills/pygame-especialist/: SKILL.md
src/: config.py  demo.py  demo_sprites.py  demo_sprites_mock.py  generate_tile.py  llm.py  main.py  pcg.py  pixel-art-prompt.md
